--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
   <div>
     Изменения для коммита
   </div>
-  <div>
-    Тут будет галлерея
+  <div class="gallery">
+    <div>
+      Тут будет галлерея
+    </div>
+    <ol>
+      <li>item 1</li>
+      <li>item 2</li>
+      <li>item 3</li>
+    </ol>
   </div>
 </body>
 </html>
