deleted branch galery changed css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div>
-    Изменения для коммита
+    Изменения для коммита и пара слов.
   </div>
   <div class="gallery">
     <div>
